--- a/src/components/IntroVideoFlash/IntroVideoFlash.module.css
+++ b/src/components/IntroVideoFlash/IntroVideoFlash.module.css
@@ -30,9 +30,24 @@
 }
 
 .singleVideo {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
+    opacity: 0;
+    transition: opacity 0.4s ease-in-out;
+}
+
+.singleVideo.visible {
+    opacity: 1;
+    z-index: 10001;
+}
+
+.singleVideo.hidden {
+    opacity: 0;
+    z-index: 10000;
 }
 
 .textOverlay {
