--- a/src/components/MantraSangrah/MantraSangrah.module.css
+++ b/src/components/MantraSangrah/MantraSangrah.module.css
@@ -8,8 +8,8 @@
 .triggerContainer {
     position: fixed;
     left: 12px;
-    top: 560px;
-    /* Moved down from 500px to balance with Sri Yantra */
+    top: 640px;
+    /* Moved down further to be below Sri Yantra center */
     z-index: 1100;
     display: flex;
     flex-direction: column;
@@ -165,8 +165,8 @@
 .acharyaContainer {
     position: fixed;
     right: 12px;
-    top: 560px;
-    /* Moved down from 500px to balance with Sri Yantra */
+    top: 640px;
+    /* Moved down further to be below Sri Yantra center */
     z-index: 1100;
     display: flex;
     flex-direction: column;
